--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint":"./node_modules/.bin/eslint src/*.js",
-    "prepush":"npm run lint && npm run test:coverage",
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint && npm run test:coverage",
     "test": "./node_modules/.bin/mocha   tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha   tests/**/*.spec.js --watch --require babel-register",
     "test:coverage": "nyc npm test",
     "prepare": "husky install"
   },
   "nyc": {
-    "reporter": ["text","html"],
-    "functions": 80,
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "functions": 0,
     "lines": 80,
     "check-coverage": true,
-    "exclude":["tests/**"]
+    "exclude": [
+      "tests/**"
+    ]
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "sinon": "^14.0.0"
-  },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
@@ -35,6 +37,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "mocha": "^10.0.0",
-    "nyc": "^15.1.0"
+    "node-fetch": "^2.6.6",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
